- Created TestResult object to hold test results - moved around the standard names so anything from a single namespace is in a separate class (with SAMLmisc for anything from multiple namespace or any additional names/values)

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>SAML2Tester-Common</groupId>
 	<artifactId>SAML2Tester-Common</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
+	<properties>
+		<used.java.home>${env.JAVA_HOME}</used.java.home> <!-- ${path.separator} -->
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
