--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>SAML2Tester-Common</groupId>
-	<artifactId>SAML2Tester-Common</artifactId>
-	<version>1.0.1</version>
+	<groupId>SAML2WebSSOTest-Common</groupId>
+	<artifactId>SAML2WebSSOTest-Common</artifactId>
+	<version>1.0.5</version>
 	<properties>
 		<used.java.home>${env.JAVA_HOME}</used.java.home> <!-- ${path.separator} -->
 	</properties>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArguments>
+						<verbose />
+						<bootclasspath>${bootclasspath}</bootclasspath>
+					</compilerArguments>
+					<showDeprecation>false</showDeprecation>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>		
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -53,6 +66,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.15</version>
 		</dependency>
 	</dependencies>
 </project>
