--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>SAML2WebSSOTest-Common</groupId>
 	<artifactId>SAML2WebSSOTest-Common</artifactId>
-	<version>1.0.5</version>
+	<version>1.0.7</version>
 	<properties>
 		<used.java.home>${env.JAVA_HOME}</used.java.home> <!-- ${path.separator} -->
 	</properties>
@@ -71,6 +71,16 @@
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>htmlunit</artifactId>
 			<version>2.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9</version>
 		</dependency>
 	</dependencies>
 </project>
