--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,15 @@
 			<artifactId>reflections</artifactId>
 			<version>0.9.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.2.1.v20140609</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>9.2.1.v20140609</version>
+		</dependency>
 	</dependencies>
 </project>
